--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,14 @@ path = "src/lib.rs"
 [features]
 default = ["std", "gzip"]
 cli = ["std", "gzip"]
+parking_lot = ["std", "dep:parking_lot"]
 std = ["strum/std"]
 gzip = ["libflate"]
 
 [dependencies]
 derive_more = { version = "1.0.0", default-features = false, features = ["as_ref", "deref", "display", "error"] }
 libflate = { version = "2.1.0", default-features = false, optional = true }
+parking_lot = { version = "0.12.3", optional = true }
 pipe-trait = "0.4.0"
 strum = { version = "0.26.3", default-features = false, features = ["derive", "phf"] }
 
