--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,15 +18,12 @@ name = "inspect_pacman_db"
 path = "src/lib.rs"
 
 [features]
-default = ["std", "gzip"]
-cli = ["std", "gzip"]
+default = []
 parking_lot = ["std", "dep:parking_lot"]
-std = ["strum/std"]
-gzip = ["libflate"]
+std = []
 
 [dependencies]
 derive_more = { version = "1.0.0", default-features = false, features = ["as_ref", "deref", "display", "error"] }
-libflate = { version = "2.1.0", default-features = false, optional = true }
 parking_lot = { version = "0.12.3", optional = true }
 pipe-trait = "0.4.0"
 strum = { version = "0.26.3", default-features = false, features = ["derive", "phf"] }
