--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "inspect-pacman-db"
+name = "parse-arch-pkg-desc"
 description = "Pure Rust library to parse package description text of a pacman package"
 version = "0.0.0"
 authors = ["khai96_ <hvksmr1996@gmail.com>"]
 license = "MIT"
 edition = "2021"
-repository = "https://github.com/pacman-repo-builder/inspect-pacman-db.git"
+repository = "https://github.com/pacman-repo-builder/parse-arch-pkg-desc.git"
 readme = "README.md"
 include = [
   "/src",
@@ -14,7 +14,7 @@ include = [
 ]
 
 [lib]
-name = "inspect_pacman_db"
+name = "parse_arch_pkg_desc"
 path = "src/lib.rs"
 
 [features]
