--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,5 @@ pipe-trait = "0.4.0"
 strum = { version = "0.26.3", default-features = false, features = ["derive", "phf"] }
 
 [dev-dependencies]
+hex-literal = "0.4.1"
 pretty_assertions = "1.4.1"
