--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,11 @@ std = ["strum/std"]
 
 [dependencies]
 derive_more = { version = "1.0.0", default-features = false, features = ["as_ref", "deref", "display", "error"] }
+iter-scan = "0.4.0"
 parking_lot = { version = "0.12.3", optional = true }
 pipe-trait = "0.4.0"
 strum = { version = "0.26.3", default-features = false, features = ["derive", "phf"] }
 
 [dev-dependencies]
+hex-literal = "0.4.1"
 pretty_assertions = "1.4.1"
