feat: eager queriers (#5)
* style: fix format

* feat(db): EagerQuerier

* refactor: simplify

* feat: expose `parse`

* fix: EagerQuerier

* refactor: remove an unnecessary binding

* refactor: make the code more symmetrical

* test: EagerQuerier

* feat: it's useless to return `processed_length`

* docs: fix

* test: invalid

* refactor: move some code out of macro

* refactor: prepare a function to share

* feat(srcinfo): EagerQuerier

* refactor: move macro to its own file

* chore(todo): remove an item

* feat: ordered names

* refactor: explicitly state `dep:`

* feat: re-export `indexmap`

* feat(db): rename `EagerQuerier` to `ParsedDb`

* feat(db): create alias `EagerQuerier`

* feat(srcinfo): rename `EagerQuerier` to `ParsedSrcinfo`

* feat: PartialParseResult

* feat: DbParseError

* feat!: remove `new`

* docs: ParsedSrcinfo

* fix: names

* feat: TryFrom

* feat: rename a method

* fix!: correct a method name

* fix: method name

* feat: checksums

* refactor: move non-macro methods out

* refactor: rename

* feat: parse_with_issues

* feat: ParsedDb::parse_with_issues

* refactor: correct macro names

* refactor: shorten the code a bit

* docs: ParsedSrcinfo as TryFrom<&str>

* fix: unknown fields

* test: parse with issue of unknown fields

* refactor: deduplicate

* test: ParsedSrcinfo as Query

* test: fix

* test: no needs for separation

* test: document steps

* test: section-specifics of complex

* test: checksums of sections

* test: query no indent

* refactor: replace long dot chain with a method

* test: filter out empty values

* test: multiple checksum types

* test: section-specifics of simple

* test: rename some bindings

* refactor: shorten the code

* test: duplicated single fields

* fix!: names of error types

* feat!: error names that make more sense

* test: rename

* refactor: replace `.pipe` with methods

* test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,12 @@ path = "src/lib.rs"
 [features]
 default = []
 parking_lot = ["std", "dep:parking_lot"]
-std = ["strum/std"]
+std = ["strum/std", "dep:indexmap"]
 
 [dependencies]
 derive_more = { version = "1.0.0", default-features = false, features = ["as_ref", "deref", "display", "error"] }
+lines-inclusive = "0.0.0"
+indexmap = { version = "2.7.1", optional = true }
 iter-scan = "0.4.0"
 parking_lot = { version = "0.12.3", optional = true }
 pipe-trait = "0.4.0"
