--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,17 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended"
-  ]
+  ],
+  "schedule": ["0 0 1 * *"],
+  "semanticCommits": "enabled",
+  "semanticCommitType": "chore",
+  "addLabels": ["renovate"],
+  "github-actions": {
+    "addLabels": ["github-actions"],
+    "semanticCommitScope": "ci"
+  },
+  "cargo": {
+    "addLabels": ["dependencies", "rust"],
+    "semanticCommitScope": "deps"
+  }
 }
