chore(renovate): set `prHourlyLimit`

--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
   "schedule": ["* 0 1 * *"],
   "semanticCommits": "enabled",
   "semanticCommitType": "chore",
+  "prHourlyLimit": 10,
   "addLabels": ["renovate"],
   "github-actions": {
     "addLabels": ["github-actions"],
