--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,7 @@ strum = { version = "0.26.3", default-features = false, features = ["derive", "p
 [dev-dependencies]
 hex-literal = "0.4.1"
 pretty_assertions = "1.4.1"
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
