--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ indexmap = { version = "2.7.1", optional = true }
 iter-scan = "0.4.0"
 parking_lot = { version = "0.12.3", optional = true }
 pipe-trait = "0.4.0"
+typebool = "0.1.0"
 strum = { version = "0.26.3", default-features = false, features = ["derive", "phf"] }
 
 [dev-dependencies]
