ci: use the preinstalled `rustup`
Closes https://github.com/pacman-repo-builder/arch-pkg-text/pull/26

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,9 @@ jobs:
             ${{ github.job }}-${{ runner.os }}-${{ hashFiles('rust-toolchain') }}-
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        shell: bash
+        run: |
+          rustup toolchain install "$(cat rust-toolchain)"
 
       - name: Install just
         uses: taiki-e/install-action@just
